# postgres-mcp

./: pyproject.toml
.opencode/skills/python-dependency-quick-remediation/: SKILL.md
